--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -1,5 +1,4 @@
 name: Workflow1
-run-name: Build + Test
 on:
   push:
     branches:
@@ -14,9 +13,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: latest
 
       - name: Install dependencies
         run: npm install
