--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -35,7 +35,10 @@ jobs:
         run: nx test nest-backend
 
       - name: Test nest-backend-e2e
-        run: nx e2e nest-backend-e2e
+        run:
+          nx serve nest-backend
+          nx e2e nest-backend-e2e
+          pkill -f "nx serve nest-backend"
 
   deploy:
     needs: [build, test]
