--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm install
@@ -33,6 +34,9 @@ jobs:
     steps:
       - name: Test nest-backend
         run: nx test nest-backend
+
+      - name: Test nest-backend-e2e
+        run: nx e2e nest-backend-e2e
 
   deploy:
     needs: [build, test]
